userChrome.css
:root {
  --bg-color:#202020;
  --bg-alt-color: #2b2b2b;
  --fg-color: #d4d4d4;
  --highlight-color: #264f78;
  --grey-color: #535353;
  --green-color: #6a9955;
  --blue-color: #76b9ed;
  --orange-color: #ce9178;
  --yellow-color: #d7ba7d;

  --tab-color: var(--bg-color);

  --context-menu-font-color: var(--fg-color);
  --context-menu-bg-color: var(--bg-color);

  --tab-bar-bg: var(--bg-alt-color);
  --tab-active-line-color: var(--blue-color);
  --tab-hover-color: var(--grey-color);
  --tab-font-color: var(--fg-color);
  --tab-selected-bg-color: var(--tab-color);
  --tab-selected-font-color: var(--fg-color);

  --search-with-text-color: var(--green-color);

  --urlbar-unfocussed-border-color: var(--grey-color);
  --urlbar-focus-border-color: var(--grey-color);
  --urlbar-font-color: var(--fg-color);
  --urlbar-dropmenu-bg-color: var(--tab-color);
  --urlbar-dropmenu-selection-color: var(--highlight-color);
  --urlbar-dropmenu-font-color: var(--fg-color);
  --url-section-bg-color: var(--tab-color);
  --url-section-font-color: var(--fg-color);

  --nav-bar-bg-color: var(--tab-color);

  --selected-text-color: var(--highlight-color);
  --disabled-text-color: var(--black2-color);

  --bookmark-font-color: var(--fg-color);

  --status-panel-font-color: var(--blue-color);
  --panel-separator-color: var(--fg-color);

  --text-hover-color: var(--bg-alt-color);

  --tab-corner-rounding: 0px;
  --animation-speed: 0.25s;

}


/******* Hiding unwanted stuff *******/

#back-button, 
#forward-button,
#tracking-protection-icon-container,
#identity-box,
#TabsToolbar.titlebar-spacer[type="post-tabs"],
.tabbrowser-tab::before, 
.tabbrowser-tab::after,
.urlbar-page-action.urlbar-icon, 
.urlbar-history-dropmarker,
.tab-close-button,
.panel-arrow,

/* Context menu stuff */
#context-navigation,
#context-sep-navigation,
#context-pocket,
#context-sep-sendpagetodevice,
#context-sendpagetodevice,
#context-sendlinktodevice,
#context-savelinktopocket,
#context-openlinkprivate,
#screenshots_mozilla_org_create-screenshot,

/* Hamburger menu stuff */
#appMenu-new-window-button,
#appMenu-private-window-button,
#appMenuRestoreLastSession,
#appMenu-open-file-button,
#appMenu-save-file-button,
#appMenu-find-button,
#appMenu-fxa-container,
#appMenu-zoom-controls,
#appMenu-fxa-label,
#appMenu-edit-controls,
#appMenu-print-button,
#appMenu-more-button,
#appMenu-help-button,
#appMenu-quit-button,
#appMenu-logins-button {
  display: none !important;
}

.urlbar-page-action,
.urlbar-icon,
.titlebar-spacer[type="pre-tabs"] {
  visibility: hidden !important;
}


/******* MAIN WINDOW BORDERS *******/

#main-window{
  border-top-color: var(--grey-color) !important;
}

#main-window:-moz-window-inactive {
  border-top-color: #3b3b3b !important; /* from windows inactive color */
}


/******* Hamburger- and arrowmenu *******/

/* Hidden menu items */
#widget-overflow-mainView > .panel-subview-body > toolbarseparator,
.PanelUI-subView menuseparator, 
.PanelUI-subView toolbarseparator,
.cui-widget-panelview menuseparator, 
.cui-widget-panel toolbarseparator {
  -moz-appearance: none;
  min-height: 0;
  border-top: 0px solid var(--panel-separator-color) !important;
  border-bottom: none;
  margin: 0px 0!important;
  padding: 0;
}

.panel-subview-body,
#appMenu-zoomReset-button {
  font-family: "Open Sans Semibold" !important;
  font-size: 9pt !important;
  color: var(--context-menu-font-color) !important;
  background: var(--context-menu-bg-color) !important;
}

.panel-header {
  border-bottom: 1px solid var(--green-color) !important;
  background: var(--context-menu-bg-color) !important; 
  font-family: "Open Sans Semibold" !important;
  font-size: 9pt !important;
}

/* "Customise Toolbar" and username */
.panel-subview-footer,[class^="PanelUI-"] {
color: var(--context-menu-font-color) !important;
}

.subviewbutton.panel-subview-footer {
  background-color: var(--context-menu-bg-color) !important;
  border-top: 1px var(--context-menu-font-color) !important;
  font-family: "Open Sans Semibold" !important;
  font-size: 9pt !important;
}

tooltip {
  -moz-appearance: none !important;
  font-family: "Open Sans Semibold" !important;
  font-size: 9pt !important;
  color: var(--context-menu-font-color) !important;
  background-color: var(--context-menu-bg-color) !important;
  padding: 6.5px !important;
}

menupopup {
	-moz-appearance: none !important;
	padding: 8px 8px 8px 8px !important;
	background-color: var(--context-menu-bg-color) !important;
	min-width: 150px !important;
}

menuseparator {
	-moz-appearance: none !important;
	border: none !important;
	padding: .5px 0px .5px 0px !important;
	margin: 2px 2px 2px 8px !important;
	background-color: var(--context-menu-font-color) !important;
}

menuitem, menu {
  -moz-appearance: none !important;
  padding: 2px 0px 2px 0px !important;
  font-family: "Open Sans Semibold" !important;
  font-size: 9pt !important;
  color: var(--context-menu-font-color) !important;
}

menuitem[disabled="true"], menuitem[disabled="true"] > .menu-text {
	color: var(--disabled-text-color) !important;
}

menuitem:hover, menu:hover, menu[open="true"], menuitem[_moz-menuactive="true"]	 {
	-moz-appearance: none !important;
	background-color: var(--text-hover-color) !important;
}

menugroup {
	padding: 0px !important;
	background-color: transparent !important;
}

menuitem > .menu-text, menuitem > .menu-iconic-text {
  font-family: "Open Sans Semibold" !important;
  font-size: 9pt !important;
  color: var(--context-menu-font-color) !important;
}


/******* Statuspanel  *******/

#statuspanel #statuspanel-label {
  -moz-appearance: none !important;
  background-color: var(--context-menu-bg-color) !important;
  font-family: "Open Sans Semibold" !important;
  font-size: 11px !important;
  color: var(--status-panel-font-color) !important;
  border: 0px solid !important;
  border-radius: 1px !important;
  padding: 5px 5px 5px 5px !important;
}
/* ... */

